vpc.tf

data "aws_availability_zones" "available" {
  state = "available"
}

resource "aws_vpc" "vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true
  instance_tenancy     = "default"
  tags = {
    Environment = "drupal"
    Name        = "drupal-vpc-01"
  }
}


resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Environment = "drupal"
    Name        = "drupal-igw-01"
  }
}

resource "aws_subnet" "public_subnets" {
  vpc_id = aws_vpc.vpc.id


  count = var.max

  cidr_block              = cidrsubnet(aws_vpc.vpc.cidr_block, 4, count.index)
  availability_zone       = data.aws_availability_zones.available.names[count.index]
  map_public_ip_on_launch = true

  assign_ipv6_address_on_creation = false
  tags = {
    Name = "main-public-subnets"
  }
}
resource "aws_subnet" "private_subnets" {
  vpc_id = aws_vpc.vpc.id
  count  = var.max


  cidr_block        = cidrsubnet(aws_vpc.vpc.cidr_block, 4, count.index + var.max)
  availability_zone = data.aws_availability_zones.available.names[count.index]
  tags = {
    Name = "main-private-rt"
  }
}

# route tables
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.vpc.id
  route {
    cidr_block = "0.0.0.0/0" # Traffic from Public Subnet reaches Internet via Internet Gateway
    gateway_id = aws_internet_gateway.igw.id
  }
  tags = {
    Name = "main-public-rt"
  }
}


resource "aws_route_table" "private_rt" {
  count  = var.max
  vpc_id = aws_vpc.vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.main_nat[count.index].id
  }

  tags = {
    Name = "main-private-rt"
  }
}


resource "aws_eip" "nat_eip" {
  count = var.max
  vpc   = true
  depends_on = [
    aws_internet_gateway.igw
  ]
}
resource "aws_nat_gateway" "main_nat" {
  count         = var.max
  allocation_id = aws_eip.nat_eip[count.index].id
  subnet_id     = aws_subnet.public_subnets[count.index].id

  tags = {
    Name = "gw NAT"
  }

  # To ensure proper ordering, it is recommended to add an explicit dependency
  # on the Internet Gateway for the VPC.
  depends_on = [aws_internet_gateway.igw]
}


resource "aws_route_table_association" "public_rta" {
  count          = var.max
  subnet_id      = aws_subnet.public_subnets[count.index].id
  route_table_id = aws_route_table.public_rt.id

}
resource "aws_route_table_association" "private_rta" {
  count          = var.max
  subnet_id      = aws_subnet.private_subnets[count.index].id
  route_table_id = aws_route_table.private_rt[count.index].id
}
